# meu_coder

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  coverage.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/api/endpoints/: health.py  items.py  users.py
app/api/schemas/: item.py  user.py
app/core/: config.py
app/middleware/: error_handler.py
tests/: conftest.py  test_health.py  test_items.py  test_users.py
